<resources>
    <string name="app_name">TestApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="release_date">Release Date:</string>
    <string name="movie_name">Movie Name:</string>
    <string name="movie_language">Movie Language</string>
    <string name="description">Description</string>
    <string name="vote">Vote</string>
    <string name="rating">Rating</string>
</resources>